--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,35 @@
             <version>42.7.1</version>
         </dependency>
 
+        <!-- Google Cloud Vision API Dependency -->
+        <dependency>
+            <groupId>com.google.cloud</groupId>
+            <artifactId>google-cloud-vision</artifactId>
+            <version>2.1.3</version> <!-- Stable version available -->
+        </dependency>
+
+        <!-- Protocol Buffers Dependency -->
+        <dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java</artifactId>
+            <version>3.19.4</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mindrot</groupId>
+            <artifactId>jbcrypt</artifactId>
+            <version>0.4</version>  <!-- This is the latest version at the time of writing -->
+        </dependency>
+
     </dependencies>
+
+    <repositories>
+        <!-- Default Maven Central Repository -->
+        <repository>
+            <id>central</id>
+            <url>https://repo.maven.apache.org/maven2</url>
+        </repository>
+    </repositories>
 
     <build>
         <plugins>
