--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,13 @@
             <version>42.7.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.mindrot</groupId>
+            <artifactId>jbcrypt</artifactId>
+            <version>0.4</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
