--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,13 @@
             <artifactId>postgresql</artifactId>
             <version>42.7.1</version>
         </dependency>
+        <!-- Metadata -->
+        <dependency>
+            <groupId>com.drewnoakes</groupId>
+            <artifactId>metadata-extractor</artifactId>
+            <version>2.18.0</version>
+        </dependency>
+
 
         <dependency>
             <groupId>org.mindrot</groupId>
