--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,13 @@
             <version>0.4</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.drewnoakes</groupId>
+            <artifactId>metadata-extractor</artifactId>
+            <version>2.18.0</version>
+        </dependency>
+
+
 
     </dependencies>
 
