--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,13 @@
 
     <dependencies>
 
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.10.1</version>
+        </dependency>
+
+
 
         <!-- JavaFX Dependencies -->
         <dependency>
